--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>my awesome typescript project</title>
+
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      #game {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+      }
+
+      #game canvas {
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+        margin: auto;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div id="game"></div>
+  </body>
 </html>
